<resources>
    <string name="app_name">Movie to watch</string>
    <string name="add_title">Add movie</string>
    <string name="search_title">Search result</string>
    <string name="title_movie_name">Movie Name</string>
    <string name="title_movie_year">Movie Year</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="clear_checked">Clear checked</string>
    <string name="fab_add">Add</string>
    <string name="search_button">Search button</string>
    <string name="add_movie">Add movie</string>
    <string name="title_movie_genre">Movie genre</string>
    <string name="no_movies_in_list">No movies in list</string>
    <string name="film_list_empty">Film list is empty, add new film by tap a button below!</string>
</resources>